--- a/App/ClientApp/src/app/layout/profile/profile.component.html
+++ b/App/ClientApp/src/app/layout/profile/profile.component.html
@@ -30,7 +30,7 @@
                 <div class="validation-msg" style="color:red">
                   <ul style="list-style-type:none">
                     <li class="text-danger" *ngIf="profileFormErrorObject.showProfilePictureSizeError">
-                      File size should not be greater the 2MB
+                      File size should not be greater the 200kb
                     </li>
                     <li class="text-danger" *ngIf="profileFormErrorObject.showProfilePictureTypeError">
                       Invalid file type
