--- a/App/ClientApp/src/app/layout/asset-libraries/add-asset-library/add-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/add-asset-library/add-asset-library.component.html
@@ -65,10 +65,10 @@
 
         <div class="d-flex justify-content-between mb-4">
           <div>
-            <button type="button" class="btn-add-outline btn-tbl-action btn-cust" [disabled]="assetLibrary.Identifier<=0" (click)="ShowUploadAssetContainer()">
+            <button type="button" class="btn-add-outline btn-tbl-action btn-cust" [disabled]="disableUploadAsset()" (click)="ShowUploadAssetContainer()">
               <span class="fa fa-plus btn-icon-cust btn-icon-outline"></span> Upload Asset
             </button>
-            <button type="button" class="btn-add-outline btn-tbl-action btn-cust ml-2" [disabled]="assetLibrary.Identifier<=0" (click)="DeleteAll()">
+            <button type="button" class="btn-add-outline btn-tbl-action btn-cust ml-2" [disabled]="disableDeleteAsset()" (click)="DeleteAll()">
               <span class="fa fa-trash-o btn-icon-cust btn-icon-outline"></span> Delete Asset
             </button>
           </div>
@@ -84,14 +84,14 @@
           <ng-container matColumnDef="name">
             <th class="width30" mat-header-cell *matHeaderCellDef mat-sort-header>
               <div class="custom-control custom-checkbox">
-                <input class="custom-control-input" type="checkbox" value="">
+                <input class="custom-control-input" type="checkbox" [checked]="isCheckAll" value="" (change)="IsCheckAll($event.target)">
                 <label class="custom-control-label">   Name</label>
               </div>
             </th>
             <td mat-cell *matCellDef="let element">
               <div class="custom-control custom-checkbox">
-                <input class="custom-control-input" type="checkbox" value="">
-                <label class="custom-control-label">   {{element.name}}</label>
+                <input class="custom-control-input" type="checkbox" [checked]="element.IsChecked" value="" (change)="IsCheckItem($event.target,element)">
+                <label class="custom-control-label">   {{element.Name}}</label>
               </div>
             </td>
           </ng-container>
@@ -100,7 +100,7 @@
               Last Updated By
             </th>
             <td mat-cell *matCellDef="let element">
-              {{element.updatedby}}
+              {{element.UpdatedBy}}
             </td>
           </ng-container>
           <ng-container matColumnDef="date">
@@ -108,7 +108,7 @@
               Last Updated Date
             </th>
             <td mat-cell *matCellDef="let element">
-              {{element.date}}
+              {{element.LastUpdatedDate}}
             </td>
           </ng-container>
 
@@ -116,8 +116,8 @@
             <th class="width10" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
-                <button type="button" title="Download" id="btnUpdate"><span class="fa fa-download"></span></button>
-                <button type="button" title="Delete" id="btnDelete"><span class="fa fa-trash-o"></span></button>
+                <button type="button" title="Download" (click)="DownloadAsset(element.Identifier)" id="btnUpdate"><span class="fa fa-download"></span></button>
+                <button type="button" title="Delete"  (click)="DeleteAsset(element.Identifier)" id="btnDelete"><span class="fa fa-trash-o"></span></button>
               </div>
             </td>
           </ng-container>
@@ -180,10 +180,10 @@
             resources1.png <span class="badge badge-light"><span class="fa fa-close"></span></span>
           </div>-->
           <div *ngIf="fileNameList.length > 0" class="file-list-container stylescrollbar-width">
-            <span *ngFor="let fileName of fileNameList" class="file-list">
+            <div *ngFor="let fileName of fileNameList" class="file-list">
               <span class="fas fa-times" (click)="removeFileFromUpload(fileName)"></span>
               {{fileName}}
-            </span>
+            </div>
           </div>
         </div>
       </div>
@@ -191,7 +191,7 @@
     <div class="filter-footer">
       <ul class="nav nav-toolbar">
         <li class="nav-item width50">
-          <button (click)="UploadAsset()" title="Save" id="btnCloseForm"
+          <button (click)="UploadAsset()"  [disabled]="fileNameList.length<=0" title="Save" id="btnCloseForm"
                   class="btn-footer-fill btn-block rounded-0 height100">
             <span class="fa fa-check"></span>
           </button>
