--- a/App/ClientApp/src/app/layout/template/add/add.component.html
+++ b/App/ClientApp/src/app/layout/template/add/add.component.html
@@ -2,27 +2,39 @@
   <div class="page-title">
     <span class="xs-title">Add Page</span>
   </div>
-  <div class="card border-0 mb-2 card-shadow">
-    <div class="card-body">
-      <div class="row form-group">
-        <div class="col-md-4 col-lg-4">
-          <label id="lblName" for="inputRoleName">Name</label>
-          <input type="text" class="form-control" id="lblName" />
+
+  <form [formGroup]="pageFormGroup" name="pageForm">
+    <div class="card border-0 mb-2 card-shadow">
+      <div class="card-body">
+        <div class="row form-group">
+          <div class="col-md-4 col-lg-4">
+            <label id="lblPageName" for="inputPageName" >Name</label> <span class="text-danger"> *</span>
+            <input type="text" class="form-control" id="inputPageName" formControlName="pageName"/>
+            <div class="validation-msg" style="color:red" *ngIf="pageName.touched && pageName.errors">
+              <ul *ngIf="pageFormErrorObject.showPageNameError" style="list-style-type:none">
+                  <li class="text-danger" *ngIf="pageName.errors?.pattern">Invalid page name</li>
+                  <li class="text-danger" *ngIf="pageName.errors?.required">Page name required</li>
+              </ul>
+          </div>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 col-lg-4">
-          <label id="lblTemplate" for="inputRoleName">Page Type</label>
-          <select class="form-control">
-            <option selected>Select</option>
-            <option>Home</option>
-            <option>Saving Account</option>
-            <option>Current Account</option>
-          </select>
+        <div class="row">
+          <div class="col-md-4 col-lg-4">
+            <label id="lblPageType" for="inputageType">Page Type</label> <span class="text-danger"> *</span>
+            <select id="inputageType" formControlName="pageType" (change)="onPageTypeSelected($event)" class="form-control">
+              <option *ngFor="let pt of pageTypelist" [value]="pt.Identifier">{{pt.Name}}</option>
+            </select>
+            <div class="validation-msg" style="color:red">
+              <ul *ngIf="pageFormErrorObject.showPageTypeError" style="list-style-type:none">
+                <li class="text-danger">Please select page type</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  </form>
+
   <div class="card border-0 mt-4 mb-3 bg-transparent">
     <div class="card-body p-0">
       <button class="btn-footer-fill mr-2" id="btnSave">Save</button>
