--- a/App/ClientApp/src/app/layout/template/list/list.component.html
+++ b/App/ClientApp/src/app/layout/template/list/list.component.html
@@ -43,7 +43,10 @@
         </ng-container>
         <ng-container matColumnDef="date">
           <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef> Published Date </th>
-          <td mat-cell *matCellDef="let element">{{element.PublishedOn | date : "dd/MM/yyyy" }} </td>
+          <td mat-cell *matCellDef="let element"> 
+            <span *ngIf='element.PublishedOn!="0001-01-01T00:00:00"'>{{element.PublishedOn | date : "dd/MM/yyyy" }} </span>
+            <span *ngIf='element.PublishedOn=="0001-01-01T00:00:00"'> - </span>
+          </td>
         </ng-container>
         <ng-container matColumnDef="status">
           <th class="width10 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
@@ -57,11 +60,11 @@
           <th class="width20 ip-w-30" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
           <td mat-cell *matCellDef="let element">
             <div class="action-btns btn-tbl-action">
-              <button type="button" title="View" id="btnView" (click)="navigationTodashboardDesigner()"><span class="fa fa-file-text-o"></span></button>
-              <button type="button" title="Update" id="btnUpdate"><span class="fa fa-pencil-square-o"></span></button>
-              <button type="button" title="Delete" id="btnDelete"><span class="fa fa-trash-o"></span></button>
-              <button type="button" title="Publish" id="btnDelete"><span class="fa fa-share"></span></button>
-              <button type="button" title="Preview" id="btnDelete" data-toggle="modal" data-target="#resourcePreview"><span class="fa fa-eye"></span></button>
+              <button type="button" title="View" id="btnView" (click)="navigationTodashboardDesigner(element)"><span class="fa fa-file-text-o"></span></button>
+              <button type="button" title="Update" id="btnUpdate" (click)="navigationToDashboardDesignerEdit(element)"><span class="fa fa-pencil-square-o"></span></button>
+              <button type="button" title="Delete" id="btnDelete" (click)="DeletePage(element)"><span class="fa fa-trash-o"></span></button>
+              <button type="button" title="Publish" id="btnPublish"><span class="fa fa-share"></span></button>
+              <button type="button" title="Preview" id="btnPreview" data-toggle="modal" data-target="#resourcePreview"><span class="fa fa-eye"></span></button>
             </div>
           </td>
         </ng-container>
@@ -100,6 +103,7 @@
         <div class="form-group">
           <label>Page Type</label>
           <select formControlName="filterPageType" (change)="onPageTypeSelected($event)" class="form-control">
+            <option value="0" selected> Select</option>
             <option *ngFor="let pageType of pageTypeList" [value]="pageType.Id">{{pageType.Name}}</option>
           </select>
         </div>
@@ -119,7 +123,7 @@
         <div class="form-group">
           <label>Start Date</label>
           <div class="position-relative">
-            <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filterPublishedOnFromDate">
+            <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filterPublishedOnFromDate" placeholder="Please select start date" readonly>
             <span [owlDateTimeTrigger]="dt" class="datetime-icon">
               <i class="fa fa-calendar"></i>
             </span>
@@ -129,7 +133,7 @@
         <div class="form-group">
           <label>End Date</label>
           <div class="position-relative">
-            <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filterPublishedOnToDate">
+            <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filterPublishedOnToDate" placeholder="Please select end date" readonly>
             <span [owlDateTimeTrigger]="dt1" class="datetime-icon">
               <i class="fa fa-calendar"></i>
             </span>
