--- a/App/ClientApp/src/app/layout/template/list/list.component.html
+++ b/App/ClientApp/src/app/layout/template/list/list.component.html
@@ -61,9 +61,9 @@
           <td mat-cell *matCellDef="let element">
             <div class="action-btns btn-tbl-action">
               <button type="button" title="View" id="btnView" (click)="navigationTodashboardDesigner(element)"><span class="fa fa-file-text-o"></span></button>
-              <button type="button" title="Update" id="btnUpdate" (click)="navigationToDashboardDesignerEdit(element)"><span class="fa fa-pencil-square-o"></span></button>
+              <button type="button" title="Update" id="btnUpdate" *ngIf="element.Status!='Published'" (click)="navigationToDashboardDesignerEdit(element)"><span class="fa fa-pencil-square-o"></span></button>
               <button type="button" title="Delete" id="btnDelete" (click)="DeletePage(element)"><span class="fa fa-trash-o"></span></button>
-              <button type="button" title="Publish" id="btnPublish"><span class="fa fa-share"></span></button>
+              <button type="button" title="Publish" id="btnPublish" *ngIf="element.Status!='Published'" (click)="PublishPage(element)"><span class="fa fa-share"></span></button>
               <button type="button" title="Preview" id="btnPreview" data-toggle="modal" data-target="#resourcePreview"><span class="fa fa-eye"></span></button>
             </div>
           </td>
