--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -78,6 +78,6 @@
 
 <div class="content-wapper" [ngClass]="collapse_class">
   <router-outlet></router-outlet>
-  <div class="ftr-vrsn">V.1.0.2</div>
+  <div class="ftr-vrsn">V.{{AppVersion}}</div>
 </div>
 
