--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -39,35 +39,35 @@
 <div class="side-bar-container" [ngClass]="sidebar_class">
   <div class="side-bar-nav stylescrollbar">
     <ul class='side-bar-ul'>
-      <li class='side-bar-li active-li' (click)="navigateToDashoard()">
+      <li [ngClass]="(URL=='/dashboard')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToDashoard()">
         <a> <span class='nav-icon icon-machine-dashboard2' title="Dashboard"> </span><span class='nav-title'>Dashboard</span></a>
       </li>
-      <li class='side-bar-li' (click)="navigateToUser()">
+      <li [ngClass]="(URL=='/user')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToUser()">
         <a> <span class='nav-icon icon-users-line2' title="Users"> </span><span class='nav-title'>Users</span>  </a>
       </li>
-      <li class='side-bar-li' (click)="navigateToRoles()">
+      <li [ngClass]="(URL=='/roles')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToRoles()">
         <a> <span class='nav-icon icon-roles-line2' title="Roles"> </span> <span class='nav-title'>Roles</span> </a>
       </li>
-      <li class='side-bar-li' (click)="navigateToAssetLibraries()">
+      <li [ngClass]="(URL=='/assetlibrary')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToAssetLibraries()">
         <a> <span class='nav-icon fa fa-folder-o' title="Asset Libraries"> </span> <span class='nav-title'>Asset Libraries</span> </a>
       </li>
-      <li class='side-bar-li' (click)="navigateToWidgets()">
+      <li [ngClass]="(URL=='/widgets')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToWidgets()">
         <a> <span class='nav-icon icon-line-dashboard2' title="Widgets"></span><span class='nav-title'>Widgets</span>  </a>
       </li>
-      <li class='side-bar-li' (click)="navigateToTemplates()">
+      <li [ngClass]="(URL=='/pages')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToTemplates()">
         <a> <span class='nav-icon icon-templates2' title="Pages"></span><span class='nav-title'>Pages</span>  </a>
       </li>
-      <li class='side-bar-li' (click)="navigateToStatementDef()">
+      <li [ngClass]="(URL=='/statementdefination')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToStatementDef()">
         <a> <span class='nav-icon icon-statemenrDefinitions' title="Statement Definitions"> </span> <span class='nav-title'>Statement Definitions</span> </a>
       </li>
-      <li class='side-bar-li' (click)="navigateToScheduleManagement()">
+      <li [ngClass]="(URL=='/schedulemanagement')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToScheduleManagement()">
         <a> <span class='nav-icon icon-production-plan-line2' title="Schedule Management"> </span> <span class='nav-title'>Schedule Management</span> </a>
       </li>
 
-      <li class='side-bar-li' (click)="navigateToLogs()">
+      <li [ngClass]="(URL=='/logs')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToLogs()">
         <a> <span class='nav-icon icon-reportGenerations2' title="Logs"> </span> <span class='nav-title'>Logs</span> </a>
       </li>
-      <li class='side-bar-li' (click)="navigateToAnalytics()">
+      <li [ngClass]="(URL=='/analytics')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToAnalytics()">
         <a> <span class='nav-icon icon-rp-yield1' title="Analytics"> </span> <span class='nav-title'>Analytics</span> </a>
       </li>
 
@@ -75,7 +75,6 @@
     </ul>
   </div>
 </div>
-
 <div class="content-wapper" [ngClass]="collapse_class">
   <router-outlet></router-outlet>
   <div class="ftr-vrsn">V.{{AppVersion}}</div>
